# ZooProcess-lib

./: Background.py  Border.py  ProjectClass.py  README.md  Read.me  ReadLog.py  Test_ReadLog.py  ZooscanFolder.py  Zooscan_convert.py  img_tools.py  img_tools_2.py  median.py  pyproject.toml  readlog.old.py  requirements.txt  test_8bit.py  test_8bit2.py  test_ProjectClass.py  test_background.py  test_bg2.py  test_median.py  test_zooprocess.py  test_zooprocess2.py  test_zooprocess3.py  test_zooprocess_from_piqv.py  to8bit.py  zooprocess.py  zooprocess2.py  zooprocess3.py
.github/workflows/: python-tests.yml
src/ZooProcess_lib/: Background.py  BgCombiner.py  BgRemover.py  Border.py  Converter.py  EllipseFitter.py  Extractor.py  Features.py  ImageJLike.py  Legacy.py  LegacyConfig.py  LegacyMeta.py  Lut.py  Processor.py  ROI.py  ReadLog.py  Segmenter.py  bitmaps.py  (+14 more)
tests/: data_dir.py  data_tools.py  env_fixture.py  projects_for_test.py  test_8bit_background.py  test_8bit_sample.py  test_ImageJLike.py  test_ProjectClass.py  test_averaged_median_mean.py  test_background.py  test_bg2.py  test_bg_sample_vis1.py  test_calculators.py  test_combine_backgrounds.py  test_extractor.py  test_features.py  test_img_tools.py  test_measurements.py  test_median.py  test_pid_file.py  test_project_meta.py  test_project_meta_write.py  test_read_sample.py  test_read_work_sample.py  test_roi.py  test_sample.py  test_scan_log_meta.py  test_segmenter.py  test_utils.py  test_vignetter.py  test_zooprocess.py  test_zooprocess3.py  test_zooprocess_from_piqv.py
tests_field/: README.md  __init__.py  env_fixture.py  projects_for_test.py  projects_repository.py  run.sh  test_8bit_background.py  test_8bit_sample.py  test_ProjectClass.py  test_ReadLog.py  test_background.py  test_bg2.py  test_median.py  test_raw_to_work.py  test_read_pids.py  test_read_work_sample.py  test_same_msk.py  test_sample.py  test_separator_gif.py  test_txt_metadata.py  test_vignetter.py  test_zooprocess.py  test_zooprocess2.py  test_zooprocess_from_piqv.py  test_zooscan_drive.py
(+34 files in other folders)
