[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ZooProcess_lib"
version = "0.1.0"
authors = [
  { name="Laurent Salinas", email="grololo06@github.com" },
]
description = "A Python library for processing Zooscan images, reproducing ZooProcess legacy (v8) behavior"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "pillow",
]

[project.urls]
"Homepage" = "https://github.com/ecotaxa/ZooProcess-lib"
"Bug Tracker" = "https://github.com/ecotaxa/ZooProcess-lib/issues"

[tool.setuptools.packages.find]
where = ["src"]
